# VivaVictoriaQuestions

./: .gitignore  Makefile  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_12_18_1831-ea23077510a7_init.py  2023_12_18_1845-3988d2a1970d_add_categories.py  2023_12_18_1847-efcbf9427d3d_add_questions.py  2023_12_18_1849-63fd3e300aa0_add_answers.py  2023_12_18_2043-3dd1b3c0e39c_add_categories_name_unique_constraint.py  2023_12_18_2046-59e6ca0ab0d0_add_questions_body_unique_constraint.py  2023_12_18_2244-e602beefc86b_add_answers_is_correct_field.py
src/: main.py  models.py  repositories.py  schemas.py  services.py  unit_of_work.py
src/core/: __init__.py  app_factory.py  container.py  settings.py
src/entrypoints/: __init__.py  categories_router.py  dependencies.py  health_router.py  questions_router.py  schemas.py
tests/: conftest.py
tests/e2e/: test_health_router.py
