[tool.poetry]
name = "questions"
version = "0.1.0"
description = ""
authors = ["smwatertd <korablev.danil.smtd@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
flake8-pyproject = "^1.2.3"
flake8-comprehensions = "^3.14.0"
mypy = "^1.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
show-source = true
statistics = false
doctests = true

max-line-length = 120
blank-line-before-imports = 2
max-complexity = 4
inline-quotes = "single"
accept-encodings = "utf-8"
isort-show-traceback = true

exclude = [
  ".git",
  ".venv",
  "migrations",
  "__pycache__",
]

per-file-ignores = [
  "__init__.py: F401",
]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true
exclude = [
  "docs",
  "tests",
  "migrations",
  ".venv",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]
